# E-commerce-Pipeline-SQL-Polars

./: .gitignore  LICENSE  README.md  compose.yaml  create_tables.sql  main.py  pyproject.toml  sqlalchemy_en.ipynb  sqlalchemy_pt.ipynb
